# zwm

./: .dockerignore  .gitignore  Dockerfile  README.md  ablation_experiment.py  docker-compose.yml  pyproject.toml  run_iching_ablation.py
.github/workflows/: ci.yml
data/: gbm_randomwalk.npy
docs/: BLUEPRINT.md  WIRING_PLAN.md
k8s/helm/zwm/: Chart.yaml  values.yaml
k8s/helm/zwm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
scripts/: _zwm  ablate_iching.py  ablate_iching_v2.py  deploy_local.py  record_reality.py  test_burden.py  test_vision_ooda.py  train_jena.py  verify_dataflow.py  verify_multifield.py  visualize_field.py  zwm-completion.bash
src/zwm/: __init__.py  a2a_transport.py  cli.py  demo.py  mcp.py  mcp_http.py  observability.py  openinference.py  runtime.py  tracing.py
src/zwm/api/: __init__.py  app.py  ratelimit.py  routes.py  schemas.py
src/zwm/core/: __init__.py  constants.py  device.py  hexagram.py  trigram.py  yao.py
src/zwm/embodied/: __init__.py  ros2_bridge.py
src/zwm/encoder/: __init__.py  base.py  field_encoder.py  multimodal.py  vision_backbone.py  vision_field.py
src/zwm/grpc/: __init__.py  server.py
src/zwm/hexaembed/: __init__.py  vsa.py
src/zwm/jepa/: __init__.py  circular_encoder.py  distributed.py  field_gnn.py  heads.py  predictor.py  square_encoder.py  structured_encoder.py  vq.py
src/zwm/langevin/: __init__.py  diffusion.py  sampler.py  score.py
src/zwm/learning/: __init__.py  checkpoint.py  ewc.py  hebbian.py  metrics.py  online.py
src/zwm/llm/: __init__.py  backends.py  context.py  router.py
src/zwm/moe/: __init__.py  experts.py  router.py  sparse_activation.py
src/zwm/planner/: __init__.py  a2a.py  agent.py  agent_builder.py  agent_config.py  agent_data.py  agent_phases.py  agent_priors.py  agent_train.py  async_agent.py  codon.py  field_mutations.py  loop.py  mutations.py  react.py  surface.py
src/zwm/safety/: __init__.py  constitution.py  llm_judge.py
src/zwm/scene_field/: __init__.py  calendar.py  five_hexagrams.py  liuqin.py  time_context.py  time_field.py  unified_field.py  wuxing.py
src/zwm/self_field/: __init__.py  efe.py  harmony.py  palace_graph.py  particle_filter.py  self_state.py
src/zwm/spectrum/: __init__.py  complex_phase.py  frequency.py  interference.py
src/zwm/storage/: __init__.py  episodic_db.py  vector_index.py
src/zwm/topology/: __init__.py  recursive.py
tests/: conftest.py  test_ablation_iching_jepa.py  test_audit_remediation.py  test_core.py  test_integration.py  test_m1_distributed_fsdp.py  test_p2p3_observability_mcp.py  test_p3_frontier.py  test_p4_surface_safety_tracing.py  test_runtime_dataflow.py  test_vector_index.py  test_wiring.py
